adding blog section

--- a/content/blog/intro-to-sveltekit.mdx
+++ b/content/blog/intro-to-sveltekit.mdx
@@ -28,15 +28,14 @@ In short, Svelte is a way of writing user interface components — like a naviga
   height="418"
 />
 
+---
+
 # Create new Project
 
 The easiest way to start building a SvelteKit app is to run `npm create`:
 
-```
-npm create svelte@latest my-app
-cd my-app
-npm install
-npm run dev
+```html
+npm create svelte@latest my-app cd my-app npm install npm run dev
 ```
 
 There are two basic concepts:
